fortsatt på ForgotPasswordWindow

--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -7,6 +7,110 @@
         mc:Ignorable="d"
         Title="ForgotPasswordWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label
+            x:Name="lblUsername"
+            Content="Username: "
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Height="22"
+            Width="50"
+            FontSize="8"
+            Margin="2"/>
+
+        <TextBox
+            x:Name="txtBoxUsername"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Grid.Column="1"
+            Height="22"
+            Width="100"
+            Margin="2"/>
+
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="0">
+
+            <Label
+                x:Name="lblSecurityQuestion"
+                Content="What is your favorite exercise?"
+                HorizontalAlignment="Right"
+                Height="22"
+                FontSize="8"
+                Margin="2"/>
+
+            <Label
+                x:Name="lblNewPassword"
+                Content="New password: "
+                HorizontalAlignment="Right"
+                Height="22"
+                FontSize="8"
+                Margin="2"/>
+
+            <Label
+                x:Name="lblConfirmPassword"
+                Content="Confirm password: "
+                HorizontalAlignment="Right"
+                Height="22"
+                FontSize="8"
+                Margin="2"/>
+
+        </StackPanel>
         
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1">
+
+            <TextBox
+                x:Name="txtBoxSecurityQuestion"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Grid.Column="1"
+                Grid.Row="1"
+                Height="22"
+                Width="100"
+                Margin="2"/>
+
+            <TextBox
+                x:Name="txtBoxNewPassword"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Grid.Column="1"
+                Grid.Row="1"
+                Height="22"
+                Width="100"
+                Margin="2"/>
+
+            <TextBox
+                x:Name="txtBoxConfirmPassword"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Grid.Column="1"
+                Grid.Row="1"
+                Height="22"
+                Width="100"
+                Margin="2"/>
+
+            <Button
+                x:Name="btnSave"
+                Content="Save"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Grid.Column="1"
+                Grid.Row="1"
+                Height="22"
+                Width="100"
+                Margin="2"/>
+            
+        </StackPanel>
     </Grid>
 </Window>
