jobbar på forgot password logiken

--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -29,6 +29,7 @@
 
         <TextBox
             x:Name="txtBoxUsername"
+            Text="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             HorizontalAlignment="Left"
             VerticalAlignment="Bottom"
             Grid.Column="1"
@@ -72,6 +73,7 @@
 
             <TextBox
                 x:Name="txtBoxSecurityQuestion"
+                Text="{Binding SecurityQuestion, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Grid.Column="1"
@@ -82,6 +84,7 @@
 
             <TextBox
                 x:Name="txtBoxNewPassword"
+                Text="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Grid.Column="1"
@@ -92,6 +95,7 @@
 
             <TextBox
                 x:Name="txtBoxConfirmPassword"
+                Text="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Grid.Column="1"
@@ -109,8 +113,9 @@
                 Grid.Row="1"
                 Height="22"
                 Width="100"
-                Margin="2"/>
-            
+                Margin="2"
+                Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
         </StackPanel>
     </Grid>
 </Window>
