--- a/Fit_Track/View/RegisterWindow.xaml
+++ b/Fit_Track/View/RegisterWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Fit_Track.View.RegisterWindow"
+﻿<Window x:Class="Fit_Track.View.PasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
