--- a/Fit_Track/View/WorkoutsWindow.xaml
+++ b/Fit_Track/View/WorkoutsWindow.xaml
@@ -6,7 +6,95 @@
         xmlns:local="clr-namespace:Fit_Track.View"
         mc:Ignorable="d"
         Title="WorkoutsWindow" Height="450" Width="800">
-    <Grid>
+
+    <Grid
+        Background="Crimson">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1">
+
+            <ListBox
+                Grid.Row="1"
+                Grid.Column="1"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Height="150"
+                Width="130"
+                Margin="5"/>
+
+            <Button
+                x:Name="btnSignOut"
+                Content="Sign Out"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding SignOutCommand, UpdateSourceTrigger=PropertyChanged}"
+                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
+
+        </StackPanel>
         
+
+        <StackPanel
+            Grid.Row="1">
+
+            <Button
+                x:Name="btnAddWorkout"
+                Content="Add workout"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding AddWorkoutCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <Button
+                x:Name="btnRemoveWorkout"
+                Content="Remove workout"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding RemoveWorkoutCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <Button
+                x:Name="btnWorkoutDetails"
+                Content="Workout details"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding WorkoutDetailsCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <Button
+                x:Name="btnUserDetails"
+                Content="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding UserDetailsCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <Button
+                x:Name="btnInfo"
+                Content="Info"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding InfoCommand, UpdateSourceTrigger=PropertyChanged}"/>
+
+        </StackPanel>
     </Grid>
 </Window>
