--- a/Fit_Track/View/CardioWorkout.xaml
+++ b/Fit_Track/View/CardioWorkout.xaml
@@ -1,17 +1,18 @@
-﻿<Window x:Class="Fit_Track.View.AddWorkoutWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Fit_Track.View"
-        mc:Ignorable="d"
-        Title="AddWorkoutWindow" Height="450" Width="800">
+﻿<Page x:Class="Fit_Track.View.CardioWorkout"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:Fit_Track.View"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="CardioWorkout">
 
     <Grid
         Background="Crimson">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="130"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -39,7 +40,8 @@
             Width="130"
             Margin="5"
             Grid.Column="1"
-            Command="{Binding CardioWorkoutCommand}"/>
+            Command="{Binding CardioWorkoutCommand}"
+            IsEnabled="False"/>
 
 
         <StackPanel
@@ -77,11 +79,21 @@
                 Foreground="LightGray"/>
 
             <Label
+                x:Name="lblDistance"
+                Content="Distance:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="73"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Label
                 x:Name="lblCaloriesBurned"
                 Content="Calories burned:"
                 HorizontalAlignment="Right"
                 Height="30"
-                Width="122"
+                Width="120"
                 Margin="5"
                 FontSize="15"
                 Foreground="LightGray"/>
@@ -91,7 +103,7 @@
                 Content="Notes:"
                 HorizontalAlignment="Right"
                 Height="30"
-                Width="60"
+                Width="55"
                 Margin="5"
                 FontSize="15"
                 Foreground="LightGray"/>
@@ -127,6 +139,14 @@
                 Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
 
             <TextBox
+                x:Name="txtBoxDistance"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+
+            <TextBox
                 x:Name="txtBoxCaloriesBurned"
                 HorizontalAlignment="Left"
                 Height="30"
@@ -153,4 +173,4 @@
 
         </StackPanel>
     </Grid>
-</Window>
+</Page>
