--- a/Fit_Track/View/WorkoutsWindow.xaml
+++ b/Fit_Track/View/WorkoutsWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Fit_Track.View"
         mc:Ignorable="d"
         Title="WorkoutsWindow" Height="450" Width="800">
+   
 
     <Grid
         Background="Crimson">
@@ -25,13 +26,22 @@
             Grid.Column="1">
 
             <ListBox
-                Grid.Row="1"
-                Grid.Column="1"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Height="150"
                 Width="130"
-                Margin="5"/>
+                Margin="5"
+                ItemsSource="{Binding CardioWorkouts}">
+                
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding Date}" />
+                            <TextBlock Text="{Binding Type}" FontWeight="Bold" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
 
             <Button
                 x:Name="btnSignOut"
