--- a/Fit_Track/View/WorkoutDetailsWindow.xaml
+++ b/Fit_Track/View/WorkoutDetailsWindow.xaml
@@ -6,7 +6,185 @@
         xmlns:local="clr-namespace:Fit_Track.View"
         mc:Ignorable="d"
         Title="WorkoutDetailsWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid
+    Background="Crimson">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel
+            Grid.Row="1">
+
+            <Label
+                x:Name="lblDate"
+                Content="Date:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="50"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Label
+                x:Name="lblType"
+                Content="Type:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="50"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Label
+                x:Name="lblDuration"
+                Content="Duration:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="75"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Label
+                x:Name="lblRepititions"
+                Content="Repititions:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="87"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"
+                Visibility="{Binding RepetitionsVisibility}"/>
+
+            <Label
+                x:Name="lblDistance"
+                Content="Distance:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="87"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"
+                Visibility="{Binding DistanceVisibility}"/>
+
+            <Label
+                x:Name="lblCaloriesBurned"
+                Content="Calories burned:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="120"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Label
+                x:Name="lblNotes"
+                Content="Notes:"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="55"
+                Margin="5"
+                FontSize="15"
+                Foreground="LightGray"/>
+
+            <Button
+                x:Name="btnEdit"
+                Content="Edit"
+                HorizontalAlignment="Right"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding EditCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                IsEnabled="True"/>
+
+        </StackPanel>
+
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1">
+
+            <TextBox
+                x:Name="txtBoxDate"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Date, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxType"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Type, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxDuration"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxRepititions"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Repetitions, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                Visibility="{Binding RepetitionsVisibility}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxDistance"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Distance, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                Visibility="{Binding DistanceVisibility}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxCaloriesBurned"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding CaloriesBurned, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                IsEnabled="False"/>
+
+            <TextBox
+                x:Name="txtBoxNotes"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Text="{Binding Notes, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                IsEnabled="False"/>
+
+            <Button
+                x:Name="btnSave"
+                Content="Save"
+                HorizontalAlignment="Left"
+                Height="30"
+                Width="130"
+                Margin="5"
+                Command="{Binding SaveWorkoutCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                IsEnabled="False"/>
+
+        </StackPanel>
     </Grid>
 </Window>
